hotfix: fixed some of the visual mistakes & removed unnecessary code
Class .txt-btn is not needed, removed from the App.css file. Need to remove everywhere else in js/html.

Changed member chosen cell to the corresponding class. Z-indexs should be also correct now and your selection is always on top of other people's.

Scrollbar shouldn't appear on Macs and other devices, since the grid is a bit smaller.

--- a/src/App.css
+++ b/src/App.css
@@ -20,15 +20,13 @@ body {
 button {
     background-color: #edb1e2;
     min-width: 0;
+    font-family: "Press Start 2P" !important;
 }
 
 .main {
     margin-left: 5vw;
 }
 
-.txt-btn {
-    font-family: "Press Start 2P" !important;
-}
 
 /* --------------------------------------- 98.css changes */
 
@@ -65,33 +63,19 @@ button {
     background-color: #eddfed;
     font-family: "Press Start 2P" !important;
 }
-.tutorial-card .introjs-tooltip-title {
-    border-radius: 0px;
-    color: #ffffff;
-    font-size: 12px;
-    background: linear-gradient(90deg, #d929b8, #f79ee7);    
-}
 .tutorial-card .introjs-tooltip-header {
     border-radius: 0px;
     margin: 2px;
     background: linear-gradient(90deg, #d929b8, #f79ee7);
-    
 }
-  .tutorial-card .introjs-skipbutton {
+.tutorial-card .introjs-tooltip-title {
+    border-radius: 0px;
+    color: #ffffff;
+    font-size: 12px;
+    background: inherit;    
+}
+.tutorial-card .introjs-skipbutton {
     visibility: hidden;  
-}
-
-/* --------------------------------------- Other ID:s and classes */ 
-
-#loading {
-    width: 20vw;
-    padding: 30vh 0;
-}
-
-.member-chosen-item {
-  border: 1px solid rgb(138, 40, 150);
-  position: relative;
-  z-index: 1000;
 }
 
 /* --------------------------------------- Matrix grid */
@@ -103,15 +87,13 @@ button {
     display: grid;
     grid-template-rows: repeat(64, 1fr);
     grid-template-columns: repeat(64, 1fr);
-    width: 90vh;
-    height: 90vh;
-    margin-left: auto;
-    margin-right: auto;
+    width: 88vh;
+    height: 88vh;
 }
 
 /* A regular cell of the matrix grid */
 .grid-item {
-    border: 0.1vw solid #000000;
+    border: 0.1vh solid #000000;
 }
 
 /* Selected cell will get a golden highlight */
@@ -119,7 +101,7 @@ button {
     border: 1px solid rgb(138, 40, 150);
     box-shadow: 1px 1px 8px 8px rgb(255, 238, 0);
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 /* --------------------------------------- Colour palette */
@@ -130,7 +112,6 @@ button {
     margin-left: 5vw;
     width: 8vw;
     height: 30vw;
-    z-index: 2;
 }
 .colorPalette .title-bar {
     text-align: left;
@@ -166,13 +147,11 @@ button {
     left: 0;
     top: 0;
     background-color: rgba(102, 102, 102, 0.476);
-    z-index: 2;
 }
 .side-bar {
     height: 100%;
     width: 20vh;
     position: fixed;
-    z-index: 2;
     top: 0;
     left: 0;
     background-color: rgba(74, 74, 74, 0.399);
@@ -195,7 +174,6 @@ button {
     bottom: 2vh;
     width: 8vh;
     height: 8vh;
-    
 }
 #google-logo {
     width: 2vh;
@@ -225,3 +203,15 @@ button {
     text-align: left;
 }
 
+/* --------------------------------------- Other ID:s and classes */ 
+
+#loading {
+    width: 20vw;
+    padding: 30vh 0;
+}
+
+.member-chosen-item {
+    border: 1px solid rgb(138, 40, 150);
+    position: relative;
+    z-index: 1;
+}
